# mlsat

./: .gitignore  .ocamlformat  bad  badnp  c8  cd  correct  correctnp  decisions  decisions_occur  dune  dune-project  good  mlsat.opam  normal  perf.data  perf.data.old  results.txt  test.cnf  testresults2_1.txt  testresults2_1024.txt  testresults2_128.txt  testresults2_16.txt  testresults2_2.txt  testresults2_256.txt  testresults2_32.txt  testresults2_4.txt  testresults2_512.txt  testresults2_64.txt  testresults2_8.txt  testresults3_1024.txt  testresults3_128.txt  testresults3_16.txt  testresults3_256.txt  testresults3_32.txt  testresults3_512.txt  testresults3_64.txt  testresults3_8.txt  testresults4_1024.txt  testresults4_128.txt  (+18 more)
lib/: driver.ml  dune  luby.ml  luby.mli  solver.ml  solver.mli
lib/asm/: Assignment.ml  dune
lib/data/: assignment.ml  assignment.mli  clause.ml  clause.mli  clauseMap.ml  clauseMap.mli  cnf.ml  cnf.mli  common.ml  config.ml  database.ml  dune  frequency.ml  frequency.mli  frequencyMap.ml  frequencyMap.mli  literal.ml  literal.mli  occurrence.ml  occurrence.mli  occurrenceMap.ml  occurrenceMap.mli  problem.ml  tribool.ml  tribool.mli  unitClauseQueue.ml  unitClauseQueue.mli  (+8 more)
lib/src/: Assignment.ml  assignment.cpp  dune
lib/src/asm/: Makefile  assignment.asm
test/: aim.sh  ais.sh  basic.sh  beijing.sh  bf.sh  blocksworld.sh  bmc.sh  bms.sh  cbs.sh  dubois.sh  dune  flat.sh  gcp.sh  hanoi.sh  hole.sh  ii.sh  jnh.sh  logistics.sh  lran.sh  morphed.sh  par.sh  pret.sh  qg.sh  rti.sh  ssa.sh  test.sh  test1.sh  testresults.txt  uf.sh
(+5 files in other folders)
